kubernetes/apps/homepage/glances-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: glances
  namespace: homepage
spec:
  selector:
    matchLabels:
      app: glances
  template:
    metadata:
      labels:
        app: glances
    spec:
      hostNetwork: true
      hostPID: true
      tolerations:
        - operator: Exists
      containers:
        - name: glances
          image: nicolargo/glances:4.5.4-full
          ports:
            - containerPort: 61208
          resources:
            requests:
              memory: 64Mi
              cpu: 25m
            limits:
              memory: 256Mi
              cpu: 200m
          securityContext:
            privileged: true
          volumeMounts:
            - name: host-proc
              mountPath: /proc
              readOnly: true
            - name: host-sys
              mountPath: /sys
              readOnly: true
      volumes:
        - name: host-proc
          hostPath:
            path: /proc
        - name: host-sys
          hostPath:
            path: /sys
